styles: Fix uneven line spacing around footnotes/superscripts

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	line-height: 1.3;
+	line-height: 1.4;
 }
 
 a, a:link, a:visited { color: #000050; }
@@ -21,6 +21,7 @@ dt { margin-top: 0.5em; }
 blockquote { border-left: 2px solid green; padding-left: 1ex; margin-left: 1ex; }
 hr { width: 90%; height: 0; border: 0; border-top: solid 1px black; background: transparent; margin: 2em auto; }
 pre { tab-size: 4; }
+sup { line-height: 0;  }
 
 table {
 	margin: 0.5em;
